--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <%- include ('./views/partials/header.ejs') %>
+        <%- include ('../views/partials/header.ejs') %>
     </header>
     <div class="central">
         <div id="banner">
@@ -24,7 +24,7 @@
             </div>
     </div>
     <footer>     
-        <%- include ('./views/partials/footer.ejs') %>
+        <%- include ('../views/partials/footer.ejs') %>
     </footer>
     </body>
 </html>
