--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <header>
 <nav class="navbar background">
     <ul class="nav-list">
-        <li><a href="/">Cinénode</a></li>
-        <li><a href="/movies">Mes Films</a></li>
-        <li><a href="/movie-search">Recherche MovieDB</a></li>
-        <li><span id="connectionLink"><a href="/login">Connexion</a></span></li>
+        <li><a href="./index">Cinénode</a></li>
+        <li><a href="./views/movies">Mes Films</a></li>
+        <li><a href="./views/movie-search">Recherche MovieDB</a></li>
+        <li><span id="./views/login"><a href="/login">Connexion</a></span></li>
     </ul>
 </nav>    </header>
     <div class="central">
