--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <nav class="navbar background">
     <ul class="nav-list">
         <li><a href="./index">Cinénode</a></li>
-        <li><a href="./views/movies.ejs">Mes Films</a></li>
+        <li><a href="./views/movies.html">Mes Films</a></li>
         <li><a href="./views/movie-search">Recherche MovieDB</a></li>
         <li><span id="./views/login"><a href="/login">Connexion</a></span></li>
     </ul>
