--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <nav class="navbar background">
     <ul class="nav-list">
         <li><a href="./index">Cinénode</a></li>
-        <li><a href="./views/movies.html">Mes Films</a></li>
-        <li><a href="./views/movie-search">Recherche MovieDB</a></li>
-        <li><span id="./views/login"><a href="/login">Connexion</a></span></li>
+        <li><a href="./index">Mes Films</a></li>
+        <li><a href="./index">Recherche MovieDB</a></li>
+        <li><span id="./index"><a href="/login">Connexion</a></span></li>
     </ul>
 </nav>    </header>
     <div class="central">
