--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="./index">Cinénode</a></li>
         <li><a href="./index">Mes Films</a></li>
         <li><a href="./index">Recherche MovieDB</a></li>
-        <li><span id="./index"><a href="/index">Connexion</a></span></li>
+        <li><span id="./index"><a href="./index">Connexion</a></span></li>
     </ul>
 </nav>    </header>
     <div class="central">
